MATLAB spike decoding tutorial now complete

--- a/Tutorials/SpikeDecoding/spike_decoding_matlab.ipynb
+++ b/Tutorials/SpikeDecoding/spike_decoding_matlab.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Contents\n"
+    "# Contents\n",
+    "\n",
+    "  * [Introduction](#Introduction)\n",
+    "  * [Setting up](#Setting-up)\n",
+    "  * [Loading and inspecting the data](#Loading-and-inspecting-the-data)\n",
+    "  * [Estimating tuning curves](#Estimating-tuning-curves)\n",
+    "  * [Bayesian decoding](#Bayesian-decoding)\n",
+    "  * [Application to decoding hippocampal \"replay\"](#Application-to-decoding-hippocampal-\"replay\")\n",
+    "  * [Exercises and mini-projects](#Exercises-and-mini-projects)"
    ]
   },
   {
@@ -30,17 +38,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Setup\n",
+    "# Setting up\n",
     "\n",
     "To run this notebook, I used the following steps:\n",
-    "  * install MATLAB 2017a\n",
-    "  * install [Anaconda](https://www.continuum.io/downloads)\n",
+    "  * install MATLAB 2017a (email mvdm if you need a license)\n",
+    "  * install [Anaconda](https://www.continuum.io/downloads) (or use the Docker image which has it already installed)\n",
     "  * intialize a Python 3.5 environment (`conda create --name py35 python=3.5 anaconda`)\n",
     "  * enable the [MATLAB engine for Python](https://www.mathworks.com/help/matlab/matlab_external/install-the-matlab-engine-for-python.html) (`cd \"matlabroot\\extern\\engines\\python\"; python setup.py install`)\n",
     "  * install [imatlab](https://github.com/imatlab/imatlab) (`python -m pip install imatlab; python -m imatlab install`)\n",
     "  * you should now be able to open this notebook (`jupyter notebook` launches jupyter)\n",
     "\n",
-    "Next, we set the MATLAB environment to use the [vandermeerlab codebase](www.github.com/mvdm/vandermeerlab), and specify the location of the data folder used for this tutorial (`R042-2014-08-18`, from [van der Meer et al. (2017)](http://onlinelibrary.wiley.com/doi/10.1002/hipo.22714/full), see [here](http://ctnsrv.uwaterloo.ca/vandermeerlab/doku.php?id=analysis:course-w16:week1#grab_a_data_session_from_the_vandermeerlab_data_vault) for download instructions):"
+    "Next, we set the MATLAB environment to use the [vandermeerlab codebase](www.github.com/mvdm/vandermeerlab), and specify the location of the data folder used for this tutorial (`R042-2014-08-18`, from [van der Meer et al. (2017)](http://onlinelibrary.wiley.com/doi/10.1002/hipo.22714/full). To obtain the data, try [Datalad](http://datasets.datalad.org/?dir=/workshops/mind-2017) or see the download instructions [here](http://ctnsrv.uwaterloo.ca/vandermeerlab/doku.php?id=analysis:course-w16:week1#grab_a_data_session_from_the_vandermeerlab_data_vault) to access the mvdmlab server):"
    ]
   },
   {
@@ -67,7 +75,7 @@
     "SET_GitHub_root = 'D:\\My_Documents\\GitHub'; % replace this with the location of your local GitHub root folder\n",
     "SET_data_fd = 'D:\\data\\R042\\R042-2013-08-18'; % replace this with the location of your local data folder\n",
     "\n",
-    "addpath(genpath(cat(2,SET_GitHub_root,'\\vandermeerlab\\code-matlab\\shared')));\n",
+    "addpath(genpath(cat(2,SET_GitHub_root,'\\vandermeerlab\\code-matlab\\shared'))); % warning is because this overloads the plot() function\n",
     "\n",
     "imatlab_export_fig('print-png'); % set notebook output to be static png images"
    ]
@@ -699,13 +707,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So far, we have been using the same data -- runs on the track -- to estimate our encoding model (tuning curves) and to apply our decoder to. This \"tautological\" approach is of limited value because it does not do a good job of testing how well our decoder works on data that was not used to construct it. As a result, there is the risk of _overfitting_: capturing idiosyncratic features of data which do not generalize. A common approach to prevent overfitting is to use cross-validation, which for our data set can be visualized like this (from [van der Meer et al. (2017)](http://onlinelibrary.wiley.com/doi/10.1002/hipo.22714/full)):\n",
+    "So far, we have been using the same data -- runs on the track -- to estimate our encoding model (tuning curves) and to apply our decoder to. This \"tautological\" approach is of limited value because it does not do a good job of testing how well our decoder works on data that was not used to construct it. As a result, there is the risk of _overfitting_: capturing idiosyncratic features of data which do not generalize. A common approach to prevent overfitting is to use cross-validation, which for our data set can be visualized like this (from [van der Meer et al. 2017](http://onlinelibrary.wiley.com/doi/10.1002/hipo.22714/full)):\n",
     "\n",
-    "![crossval schematic](images/decSchemes.png)\n",
+    "<img src=\"images/decSchemes.png\" width=600px>\n",
     "\n",
     "Implementing such cross-validation schemes here would entail using different `restrict()` calls to make non-overlapping `ENC_S` and `DEC_S` sets of data, decoding `DEC_S` based on tuning curves obtained from `ENC_S`. [van der Meer et al. (2017)](http://onlinelibrary.wiley.com/doi/10.1002/hipo.22714/full) show that the distribution of decoding error across the track can differ substantially between tautological and cross-validated decoding, as illustrated here:\n",
     "\n",
-    "![crossval schematic](images/decQuantify_spaceG.png)\n",
+    "<img src=\"images/decQuantify_spaceG.png\" width=600px>\n",
     "\n",
     "This is a methodologically important observation, because these distributions are the null hypothesis of what we expect when decoding internally generated activity such as occurs during memory recall and planning. For instance, suppose you are interested in what a subject recalls about some prior experience with the task. Perhaps you find a tendency for the subject to replay trajectories that cross the decision point of the T-maze -- a potentially exciting result, because such preferential replay of decision points is what has been shown to be effective in off-line reinforcement learning. However, the above figure provides an alternative, less interesting explanation: your ability to decode locations at the edges of the track is simply lower than for the center of the track! In other words, such an observation is in fact consistent with the non-uniform null hypothesis obtained from cross-validated decoding accuracy."
    ]
@@ -716,7 +724,7 @@
    "source": [
     "# Application to decoding hippocampal \"replay\"\n",
     "\n",
-    "Now that we have validated our decoder on data where we know the correct answer, we can apply it to _internally generated activity_ that occurs in the absence of overt behavior. The rodent and human hippocampus is known to \"replay\" experience during wakeful rest and sleep ([Wilson and McNaughton 1994)](); [Pezzulo et al. 2017]()), although this term has become misleading in the light of accumulating evidence that internally generated sequences in the hippocampus (and declarative memory more generally) are _constructive_, i.e. not limited to literal repeats of prior experience, but including shortcuts and trajectories towards a goal ([Gupta et al. 2010](); [Pfeiffer and Foster 2013]()).\n",
+    "Now that we have validated our decoder on data where we know the correct answer, we can apply it to _internally generated activity_ that occurs in the absence of overt behavior. The rodent and human hippocampus is known to \"replay\" experience during wakeful rest and sleep ([Wilson and McNaughton 1994)](https://www.ncbi.nlm.nih.gov/pubmed/8036517); [Pezzulo et al. 2017](https://www.ncbi.nlm.nih.gov/pubmed/28548460)), although this term has become misleading in the light of accumulating evidence that internally generated sequences in the hippocampus (and declarative memory more generally) are _constructive_, i.e. not limited to literal repeats of prior experience, but including shortcuts and trajectories towards a goal ([Gupta et al. 2010](https://www.ncbi.nlm.nih.gov/pubmed/20223204); [Pfeiffer and Foster 2013](https://www.ncbi.nlm.nih.gov/pubmed/23594744)).\n",
     "\n",
     "Hippocampal replay is known to occur during so-called _sharp wave-ripple complexes_, SWRs for short, which are network events visible in the local field potential that reflect the sudden, transient and highly synchronous activity of a large number of hippocampal neurons. Let's find some in our data! To make visualization and analysis easier, we will linearize the 2-D position data into 1-D \"left\" and \"right\" trials:"
    ]
@@ -1408,7 +1416,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercises and mini-projects"
+    "## Exercises and mini-projects\n",
+    "\n",
+    "(cognitive)\n",
+    "  * In this session, the rat chose to go left and right an equal number of times. Is there a relationship, in time, between the rat's choice and the content of replay? For instance, does replay content follow the animal's previous choice, or instead predict the animal's upcoming choice?\n",
+    "  * Replay can be both forward and backward. Is there a difference in what part of the track these different directions depict? In where the animal is when they occur, and how far into the session the animal is?\n",
+    "  * Do replay events contain trial-unique (\"episodic\") information?\n",
+    "  * Is there structure in the distribution of start and end points of replay events when mapped onto the track?\n",
+    "  \n",
+    "(methodology)\n",
+    "  * A methodological concern in the interpretation of replay data is that our ability to decode, say, left and right parts of the track aren't equal. This could occur, for instance, because by chance we don't sample the same number of cells on the left and right. Can any bias in replay content in this session be explained based on the cross-validated decoding error on actual running data?\n",
+    "  * How does the final replay content depend on various parameters of the analysis? To which is it most or least sensitive?\n",
+    "  * How can we define a chance level for (1) individual replay events detected, and (2) the overall distribution?\n",
+    "  \n",
+    "(neurophysiology)\n",
+    "  * How far in advance can the occurrence of a SWR event be predicted from spiking data?\n",
+    "  * Can the content of replay be predicted from the \"sequence-ness\" of theta sequences, as we would predict if spike-timing dependent plasticity (STDP) underlies the formation of a memory trace which is subsequently expressed as replay?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Further reading\n",
+    "\n",
+    "TBC"
    ]
   }
  ],
