--- a/Tutorials/SpikeDecoding/spike_decoding_python.ipynb
+++ b/Tutorials/SpikeDecoding/spike_decoding_python.ipynb
@@ -730,14 +730,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(49,)"
+      ]
+     },
+     "execution_count": 249,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tc.bins[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Q = restrict(Q,metadata.taskvars.trial_iv); % for speed, only decode trials of running on track\n",
+    "Q = bst_run\n",
     "\n",
-    "nBins = length(tc.good_idx);\n",
-    "occUniform = repmat(1/nBins,[nBins 1]); % prior over locations, P(x) in section above\n",
+    "nBins = tc.\n",
+    "occUniform = np.ones(nBins) * 1/nBins # prior over locations, P(x) in section above\n",
     "\n",
     "nActiveNeurons = sum(Q.data > 0);\n",
     " \n",
