Adding more extension ideas to HMM

--- a/Tutorials/HMM/HiddenMarkovModels.ipynb
+++ b/Tutorials/HMM/HiddenMarkovModels.ipynb
@@ -71,7 +71,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "D = dd.io.load('sherlock.h5')\n",
@@ -427,7 +429,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "D = dd.io.load('AG_movie_1recall.h5')\n",
@@ -819,7 +823,8 @@
     "* Can we relate event patterns to features of the stimulus?\n",
     "* What is the \"right\" size and shape window to use when computing dynamic connectivity? (Can we maximize prediction on a held-out subject?) How does the window size impact the number of events that can be identified?\n",
     "* Can the HMM be applied to other neuroimaging modalities, such as ECoG?\n",
-    "* Can the HMM be applied to other types of data, such as word embedding vectors?"
+    "* Can the HMM be applied to other types of data, such as word embedding vectors?\n",
+    "* Can the HMM be integrated with hyperalignment, to simultaneously learn how event patterns map across subjects?"
    ]
   },
   {
